# bevy_crt

./: Cargo.toml  LICENSE  README.md
assets/shaders/: custom_material_screenspace_texture.wgsl
assets/shaders/crt-guest-advanced-hd/: afterglow.frag  bloom_horizontal.frag  bloom_vertical.frag  deconvergence.frag  linearize.frag  pass1.frag  pass2.frag  preshader.frag
assets/shaders/hyllian/: crt-hyllian.frag
src/: lib.rs  main.rs  materials.rs  plugin.rs
src/materials/: framecount.rs
