[package]
name = "bevy_crt"
version = "0.1.0"
edition = "2021"
authors = ["Cadyn"]
description = "A package for the bevy engine which enables the use of a CRT effect."
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
keywords = ["bevy", "gamedev", "graphics"]
categories = ["game-development"]
repository = "https://github.com/cadyn/bevy_crt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
